--- a/segway/share/.classpath
+++ b/segway/share/.classpath
@@ -5,7 +5,7 @@
 	<classpathentry kind="lib" path="H:/c412/segway/lib/linalg.jar"/>
 	<classpathentry kind="lib" path="H:/c412/lwjgl-2.8.3/jar/lwjgl.jar">
 		<attributes>
-			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="/home/bege/info/school/uofa/cmput-412-ta/2012winter/SVN/code/segway/lib/lwjgl-native/linux"/>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="H:/c412/lwjgl-2.8.3/native/windows"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="H:/c412/lwjgl-2.8.3/jar/lwjgl_util.jar"/>
