My lonely update...

--- a/segway/share/cfg/sensor/distance-1.cfg
+++ b/segway/share/cfg/sensor/distance-1.cfg
@@ -1,3 +1,4 @@
+# Right-side Sensor (Port 1)
 
 # distance sensor class
 class = exercise.IRSensor
@@ -11,7 +12,7 @@ z = 117
 # orientation angles (deg) rotated around the sensor's position
 # (positive angle rotates counter clockwise)
 pitch = 0
-yaw = -20
+yaw = 90
 
 # maximum value which can be returned by the sensor (mm)
 max-value = 800
