--- a/segway/share/cfg/sensor/distance-2.cfg
+++ b/segway/share/cfg/sensor/distance-2.cfg
@@ -1,3 +1,4 @@
+# Middle Sensor (Port 2)
 
 # distance sensor class
 class = exercise.IRSensor
@@ -11,7 +12,7 @@ z = 0
 # sensor orientation angles (deg) relative to the sensor's position
 # (positive angle rotates counter clockwise)
 pitch = 0
-yaw = 180
+yaw = 0
 
 # maximum value which can be returned by the sensor (mm)
 max-value = 800
