--- a/segway/share/cfg/sensor/distance-3.cfg
+++ b/segway/share/cfg/sensor/distance-3.cfg
@@ -1,4 +1,4 @@
-
+# Left-Side Sensor (Port 3)
 # distance sensor class
 class = exercise.IRSensor
 #class = solution.IRSensor
@@ -11,7 +11,7 @@ z = 117
 # sensor orientation angles (deg) relative to the sensor's position
 # (positive angle rotates counter clockwise)
 pitch = 0
-yaw = 20
+yaw = -90
 
 # maximum value which can be returned by the sensor (mm)
 max-value = 800
