--- a/segway/real-pc/.project
+++ b/segway/real-pc/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>segway-real</name>
+	<name>segway-real-pc</name>
 	<comment></comment>
 	<projects>
 	</projects>
